--- a/Home.html
+++ b/Home.html
@@ -98,7 +98,7 @@
         </div>
         <div class="col span_1_of_3 vehicle">
             <img class="carIcon" src="./img/cabriolet.png" alt="cabriolt">
-            <h2>Convertiable</h2>
+            <h2>Convertible</h2>
             <ul>
                 <li>Ford Mustang</li>
                 <li>Auto Transmission</li>
@@ -120,11 +120,13 @@
         </div>
     </div>
     <div class="divider2">
-
+        <div class="priceText">
+            <p>We are the price beater. We always provide the perfect service with low price which means you will save a lot on your budget. </p>
+        </div>
     </div>
     <div class="section group row">
         <div class="div col rateTable">
-           <h2>Rental Rates</h2>
+            <h2>Rental Rates</h2>
             <table>
                 <tr style="background-color: #f1c40f">
                     <th>Vehicle Type</th>
@@ -132,23 +134,33 @@
                     <th>Daily Rate</th>
                 </tr>
                 <tr>
-                    <td>Small-VW Polo</td>
-                    <td>Manual</td>
+                    <td>Small Car</td>
+                    <td>Manual or Automatic</td>
                     <td>$30</td>
                 </tr>
                 <tr>
-                    <td>Small-Holden Barina</td>
+                    <td>Mid-Size Car</td>
                     <td>Automatic</td>
                     <td>$35</td>
                 </tr>
                 <tr>
-                    <td>Medium-Holden Malibu</td>
+                    <td>SUV</td>
                     <td>Automatic</td>
                     <td>$50</td>
                 </tr>
                 <tr>
-                    <td>Large-Holden Commordore</td>
+                    <td>Mini Van</td>
                     <td>Automatic</td>
+                    <td>$60</td>
+                </tr>
+                <tr>
+                    <td>Convertible</td>
+                    <td>Automatic</td>
+                    <td>$60</td>
+                </tr>
+                <tr>
+                    <td>Van</td>
+                    <td>Automatic or Manual</td>
                     <td>$60</td>
                 </tr>
             </table>
@@ -158,22 +170,22 @@
         <div id="map"></div>
     </div>
     <div class="section group row contact">
-       <h1>Contact us</h1>
-        <div class="col span_1_of_2">
-            
+        <h1>Contact us</h1>
+        <div class="col span_1_of_2 panelA">
+            <ul>
+                <li>Email: carrental@carrental.com</li>
+                <li>Phone: 021123456</li>
+                <li>Address: 1 John Street, Jack, Auckland</li>
+                <li> <i class="ion-social-twitter"></i>
+                    <i class="ion-social-instagram"></i>
+                    <i class="ion-social-facebook"></i>
+                    <i class="ion-social-youtube"></i></li>
+            </ul>
         </div>
     </div>
-    <h3>Special</h3>
-    <p>
-        Maecenas scelerisque elementum diam eu posuere. In hendrerit nisl sit amet velit placerat blandit. Mauris in fermentum nunc. Nullam at rutrum felis, vitae hendrerit mauris. Suspendisse accumsan ante nunc, vel venenatis libero sodales at. Aenean elementum in ligula nec mollis. Sed pretium, purus a elementum auctor, tortor neque gravida diam, et vestibulum arcu nulla eu neque. Phasellus ac euismod odio. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-    </p>
-    <h4>Contact Us</h4>
-    <p>
-        Email us: rextree@carrental.co.nz
-        <br /> Ring us: +64 7 123456
-    </p>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1XC-48DyOivRJXOAJDiHQHbEhrnrQtxc&callback=initMap">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1XC-48DyOivRJXOAJDiHQHbEhrnrQtxc&callback=initMap">
+
+
     </script>
     <script src="js/scripts.js" type="text/javascript"></script>
 </body>
